# Deep-Stream

./: .env.example  .gitignore  .vercelignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DeepStream_Complete_Plan.md  DeepStream_Cursor_Prompt.md  LICENSE  Makefile  Plan 1.md  Plan 2.md  Plan 3.md  README.md  docker-compose.prod.yml  docker-compose.yml  railway.toml  skaffold.yaml  vercel.json
api/: Dockerfile  Makefile  go.mod  go.sum  pyproject.toml
api/app/: main.py
api/app/api/v1/: analytics.py  auth.py  pipelines.py  results.py  websocket.py
api/app/core/: exceptions.py  security.py
api/app/db/: clickhouse.py  minio.py  postgres.py
api/app/models/: pipeline.py  result.py  user.py
api/app/services/: correlation.py
api/app/services/storage/: tiered_storage.py
api/app/tests/: test_results.py
api/cmd/seed/: main.go
api/cmd/server/: main.go
api/internal/config/: config.go
api/internal/handler/: match_handler.go  match_handler_test.go  ws_handler.go  ws_handler_test.go
api/internal/handlers/: match_handler.go  player_handler.go  prediction_handler.go  prediction_handler_test.go
api/internal/metrics/: metrics.go
api/internal/middleware/: auth.go  logging.go  ratelimit.go
api/internal/otel/: otel.go
api/internal/pb/: inference.pb.go  inference_grpc.pb.go
api/internal/repository/: match_repo.go  match_repo_test.go
api/internal/server/: grpc.go  http.go  websocket.go
api/internal/service/: client_grpc.go  client_stub.go  grpc_client.go  prediction_service.go  prediction_service_test.go  stub_client.go
api/migrations/: 001_create_matches.sql  002_create_predictions.sql  003_create_users.sql
api/proto/: telemetry.proto
crates/inference-engine/: Cargo.toml
crates/inference-engine/benches/: inference_benchmark.rs
crates/inference-engine/src/: lib.rs  main.rs
crates/inference-engine/src/metrics/: prometheus.rs
crates/inference-engine/src/pipelines/: mod.rs
crates/inference-engine/src/runtime/: gpu.rs  mod.rs  onnx.rs  tensor.rs
crates/inference-engine/src/streaming/: kafka_consumer.rs  (+1 more)
crates/inference-engine/tests/: inference_tests.rs
features/: pyproject.toml
features/src/: __init__.py
features/src/advanced/: momentum_vector.py  pressure_index.py  xg_model.py  xpass_model.py
features/src/core/: player_form.py  referee_bias.py  team_chemistry.py  travel_fatigue.py  weather_impact.py
features/src/world_cup/: group_stage_features.py  knockout_features.py  penalty_features.py
inference/: Cargo.toml  Dockerfile  biomechanics.py  cv_tracker.py  jersey_ocr.py  kalman_voronoi.py  offside_detector.py  smart_ball.py
inference/benches/: inference_bench.rs  inference_latency.rs
inference/proto/: inference.proto
inference/src/: engine.rs  error.rs  features.rs  lib.rs  main.rs  metrics.rs
inference/src/explainability/: mod.rs  shap_approximation.rs
inference/src/features/: feature_vector.rs  mod.rs  online_store.rs
inference/src/metrics/: prometheus.rs
inference/src/models/: ensemble.rs  lstm_runtime.rs  mod.rs  transformer_runtime.rs  xgboost_runtime.rs
inference/src/server/: grpc.rs  health.rs  mod.rs
inference/src/streaming/: kafka_consumer.rs  mod.rs  redis_pubsub.rs
inference/tests/: integration_test.rs
ml/: README.md  evaluate.py  export_onnx.py  pyproject.toml  requirements.txt  train.py
ml/configs/: lstm_config.yaml  transformer_config.yaml  xgboost_config.yaml
ml/data/: fetch_statsbomb.py  preprocess.py  preprocess_kaggle.py
ml/data/processed/: features.parquet
ml/data/raw/: matches.parquet
ml/mlflow/: mlflow-config.yaml
ml/notebooks/: 01_eda.ipynb
ml/prompts/: tactical_analysis.prompt
ml/src/evaluation/: accuracy_metrics.py  betting_roi.py  calibration_metrics.py
ml/src/explainability/: feature_importance.py  shap_explainer.py
ml/src/models/: ensemble_aggregator.py  lstm_predictor.py  transformer_tactics.py  xgboost_ensemble.py
ml/src/training/: cross_validator.py  hyperparameter_search.py  trainer.py
(+362 files in other folders)
