[project]
name = "deepstream-api"
version = "0.1.0"
description = "DeepStream Results API"
authors = [
    { name = "Ahmed Fawzy", email = "ahmedfawzyjr@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "sqlalchemy>=2.0.0",
    "redis>=4.6.0",
    "pydantic>=2.0",
    "minio>=7.1.15",
    "asyncpg>=0.28.0",
    "clickhouse-connect>=0.6.8",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "email-validator>=2.0.0"
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
