[package]
name = "deepkick-inference"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
tract-onnx = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
prometheus = "0.13"
lazy_static = "1.4"
futures = "0.3"

[lib]
path = "src/lib.rs"

[[bin]]
name = "inference-engine"
path = "src/main.rs"
