[package]
name = "deepstream-inference"
version = "1.0.0"
edition = "2021"

[dependencies]
tract-onnx = "0.21"
tonic = { version = "0.11", features = ["tls"] }
tokio = { version = "1", features = ["full"] }
prost = "0.12"
prometheus = { version = "0.13", features = ["process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hyper = { version = "0.14", features = ["full"] }
lazy_static = "1.4"


[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"

[lib]
path = "src/lib.rs"

[[bin]]
name = "inference-server"
path = "src/main.rs"

[[bench]]
name = "inference_bench"
harness = false
