[package]
name = "inference-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
ort = "1.16" # ONNX Runtime bindings
image = "0.24" # For image preprocessing
futures = "0.3"
rdkafka = { version = "0.36", features = ["tokio"] }
redis = { version = "0.24", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
